# ngf

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  activations.py  argparser.hpp  binder.sh  bunny.nsc  cellulize.cu  closest_point.cu  closest_point.cuh  cluster.yaml  combined.py  compile.py  config.ini  configurations.py  convert.py  cut.cu  cut.py  db.json  decimate.cpp  erf.py  eval.sh  evaluate.py  figure.py  kernels.py  lods.py  measure.cu  measure.py  mesh.hpp  mesh.py  microlog.h  mlp.py  models.py  multichart.json  ngf.py  nsc.cu  nsc.py  opt.cu  (+26 more)
bindings/: mesh.cpp
casdf/: casdf.cu  casdf.hpp
configs/: activations.json  armadillo.json  assembly.json  benchmark.json  chinese.json  cut.json  dragon-statue.json  dragon.json  einstein.json  frequencies.json  goyle.json  igea.json  laplacian.json  lucy.json  mask.json  metatron.json  nefertiti.json  planck.json  roal.json  rock.json  skull.json  slab.json  venus.json  wreck.json  xyz.json
configs/features/: armadillo.json  nefertiti.json
configs/lods/: armadillo.json  dragon.json  einstein.json  igea.json  lucy.json  metatron.json  nefertiti.json  skull.json  venus.json  xyz.json
experiments/: activations.py  benchmark.py  kernels.py  main.py  measure.py  mlp.py  models.py  multi.py  opt.py  render.py  train.py  util.py  uv.py
experiments/face/: face.py
experiments/geometry-image/: main.py  render.png~
experiments/mapping/: base.ply  preview.py  ref.ply
experiments/mcgim/: construct.py  export.py  main.py  neural_mcgim.py  run.sh  train.py
experiments/meshes/: rock_source_opt.pt
experiments/simplification/: lods.py  mesh_original.obj.mtl
experiments/spectral/: geodesics.py  heat.py  main.py
ext/: casdf.cu  geometry.cpp  query.cu  sample.cu
extensions/: cluster.cpp  common.hpp  geometry.hpp  mesh.cpp  ngfutil.cu  optext.cu  parametrize.cpp  remapper.cu  setup.py  smoothing.cu  triangulate.cu  util.hpp
launchers/: nvdiffmodeling.py  run.py
media/figures/extraction/: cropall.py  displacement.py
media/figures/surface_partitioning/: display.py
media/measuring/: psdisp.py  quasiconf.py
metrics/: db.json
quads/: quadrangulate.cpp  simplify.h
rasterizer/: CMakeLists.txt  common.hpp  context.cpp  context.hpp  cpu.cu  cuda.cu  geometry.cu  glio.cpp  glio.hpp  io.cpp  io.cu  io.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh.vert.glsl  microlog.h  normals.frag.glsl  pipeline.cpp  pipeline.hpp  projection.cpp  rasterizer.cu  renderer.cu  run-all.sh  util.cpp  util.hpp  video.hpp  vkutil.cpp  vkutil.hpp
rasterizer/rasterizer-prof/: rasterizer-prof.ncu-proj
rasterizer/shaders/: depth.frag  env.frag  fill.frag  mesh.vert.glsl  ngf.frag  ngf.frag.glsl  ngf.mesh  ngf.mesh.glsl  ngf.nv.mesh.glsl  ngf.nv.task.glsl  ngf.task  ngf.task.glsl  normals.frag  normals.frag.glsl  patches.frag  payload.h  quad.vert  shaded.frag
scripts/: geometry.py  render.py
source/: .preview.py.swp  baselines.py  blender.py  cameras.py  chamfer.py  compile.py  evaluate.py  export_stl.py  export_tessellations.py  figure.py  geometry.py  lods.py  match.py  mesh.py  metrics.py  mlp.py  ngf.py  nvdiffmodeling.py  preview.py  profiling.py  render.py  runtimes.py  simplifications.py  stl_export_results.py  thumbail.py  train.py  unpack.py  util.py
source/render/: batch.py  common.py  normal.py  patched.py  render_mesh_animation.py  rotations.py  single.py  util.py
source/util/: __init__.py  exporter.py  geometry.py  mesh.py  miscellaneous.py  plot.py  siren.py  texture.py
tools/: convert.cpp  geometry.hpp  headless.cpp  main.cpp  quadrangulate.cpp
